--- a/pom.xml
+++ b/pom.xml
@@ -77,13 +77,13 @@
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>apache-jsp</artifactId>
             <version>${jetty.version}</version>
-            <!--<type>jar</type>-->
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>apache-jstl</artifactId>
             <version>${jetty.version}</version>
-            <!--<type>pom</type>-->
+            <type>pom</type>
         </dependency>
 
 
