--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 
 /var/logs/
 /jsp/
-/src/main/java/com/gfb/hotelHero/ddengi
+!/src/main/java/com/gfb/hotelHero/ddengi
 /dependency-reduced-pom.xml
 
 bower_components
