--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,9 +15,7 @@
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>
-            /WEB-INF/application-context.xml
-        </param-value>
+        <param-value>classpath:/application-context.xml</param-value>
     </context-param>
 
     <!-- Handles all requests into the application -->
