--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,9 @@
     <listener>
         <listener-class>com.gfb.hotelHero.listener.GlobalVarsListener</listener-class>
     </listener>
+    <listener>
+        <listener-class>com.gfb.hotelHero.listener.DefaultAppSettingsListener</listener-class>
+    </listener>
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
