--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,6 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Logging -->
         <!--
         | Logging
         -->
@@ -93,20 +92,14 @@
         </dependency>
 
         <!-- Spring -->
-        <!--<dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
-            <version>${spring.version}</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>commons-logging</artifactId>
-                    <groupId>commons-logging</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
+            <version>4.3.7.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
             <version>4.3.7.RELEASE</version>
         </dependency>
 
@@ -170,7 +163,6 @@
         </dependency>
 
         <!-- SQL storage -->
-
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
