--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,9 +2,7 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://java.sun.com/xml/ns/javaee"
          xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-         xsi:schemaLocation="
-  http://java.sun.com/xml/ns/javaee
-  http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          id="WebApp_ID" version="3.0">
 
     <listener>
@@ -17,11 +15,6 @@
     <listener>
         <listener-class>com.gfb.hotelHero.listener.DefaultAppSettingsListener</listener-class>
     </listener>
-
-    <!--<context-param>
-        <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:/application-context.xml</param-value>
-    </context-param>-->
 
     <!-- Handles all requests into the application -->
     <servlet>
