--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,6 +2,7 @@ log4j.rootLogger=DEBUG, console
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
+#log4j.appender.console.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
+log4j.appender.console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
 log4j.logger.org.gfb=debug
